<resources>

    <string name="app_name">Spotify Clone</string>
    <string name="cadastro">Inscreva-se grátis</string>
    <string name="login_facebook">continuar com o \nfacebook</string>
    <string name="login">entrar</string>
    <string name="text_email">E-mail ou nome de usuário</string>
    <string name="text_senha">Senha</string>
    <string name="entrar">entrar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="aviso_email">Vamos enviar um link de login para o seu e-mail.</string>
    <string name="enviar_link">enviar link</string>
    <string name="toolbar_configurar">Configurar</string>
    <string name="seja_premium">Seja premium</string>

</resources>
